# AdePT

./: CMakeLists.txt
base/inc/AdePT/: Atomic.h
examples/: CMakeLists.txt
examples/Example21/: CMakeLists.txt  example21.cpp
examples/Example21/include/: ActionInitialisation.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  EventActionMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  TrackingAction.hh
examples/Example21/src/: ActionInitialisation.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  TrackingAction.cc
examples/Example22/: AdeptIntegration.cpp  AdeptIntegration.cu  AdeptIntegration.cuh  AdeptIntegration.h  BasicScoring.cu  BasicScoring.h  CMakeLists.txt  CommonStruct.h  electrons.cuh  gammas.cuh
examples/Example22/include/: EMShowerModel.hh  EventAction.hh
examples/Example22/src/: EMShowerModel.cc  EventAction.cc
src/: AdePTGeant4Integration.cpp
test/: CMakeLists.txt  tbbfisher_price_1.cpp
